# MathComputationalScience

./: CFunction.cpp  CInerpolator.h  CMakeLists.txt  README.md  interpolation.cpp  main.cpp
cmake/: FindTCLAP.cmake
src/: CFunction.h  interpolation.cpp  solver.cpp
